infrastructure/base/storage/backup-target/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: backup-target
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: minio
  ports:
    - name: s3
      port: 9000
      targetPort: s3
      protocol: TCP
